--- a/client/src/styles/yuna.css
+++ b/client/src/styles/yuna.css
@@ -467,21 +467,82 @@
  * 메인 슬라이더 테스트
  * YuNa
 **************************/
-.test-list {
+.mainSlider-container {
+    width: 1483px;
+    position: relative;
+}
+/* .mainSlider-contoller-btn {
+    width: 50px;
+    padding: 10px;
+    position: absolute;
+    right: 0;
+    top: 295px;
+    border-radius: 10px;
+} */
+.slick-slider { /* position relative 기본 적용되어 있음*/
+    display: flex;
+    justify-content: space-between;
+    z-index: 0;
+}
+.slick-slider .slick-arrow{
+    z-index: 3;
+    width: 70px;
+    height: 70px;
+    border-radius: 10px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+.slick-slider .slick-arrow:hover,
+.mainSlider-contoller-btn:hover {
+    background-color: rgb(0, 0, 0, 0.3);
+}
+.slick-slider .slick-prev {
+    left: 0;
+}
+.slick-slider .slick-next {
+    right: 0;
+    /* margin-right: 72px; */
+}
+.slick-slider .slick-prev > img,
+.slick-slider .slick-next > img,
+.mainSlider-contoller-btn {
+    padding: 10px;
+    width: 50px;
+    height: 50px;
+    opacity: 0.5;
+}
+.slick-slider .slick-prev > img:hover,
+.slick-slider .slick-next > img:hover,
+.mainSlider-contoller-btn:hover {
+    opacity: 1;
+}
+.mainSlider-list {
     display: flex;
     width: 100%;
     justify-content: space-between;
 }
-.test-list > li {
+.mainSlider-list > li > a {
+    display: block;
     position: relative;
-    z-index: 0;
-
-}
-.test-slide-img {
-    border: 1px solid red;
-}
-.test-slide-info {
-    position: absolute;
     z-index: 1;
-    border: 1px solid blue;
+}
+.mainSlider-info {
+    position: absolute;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    top: 0;
+    background-color: rgb(0, 0, 0, 0.2);
+    color: #fff;
+}
+.mainSlider-info > div > p:not(:nth-child(3)) {
+    font-weight: bold;
+}
+.mainSlider-info-brand-name {
+    font-size: 2rem;
+    margin: 10px 0;
 }
