--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -2019,8 +2019,8 @@ section#order .form_wrap .btns .btn.gray {
     width: 70px; 
 }
 .goods-info-bottom-color>ul ,.goods-info-bottom-size>ul{
-    display: flex; 
-    flex-wrap: wrap;
+    display: grid; 
+    grid-template-columns: repeat(4, 1fr);
     gap: 10px;
 }
 .goods-info-bottom-size>ul>li{
@@ -3172,6 +3172,9 @@ section#order .form_wrap .btns .btn.gray {
     left: -1px;
     width: 100%;
     height: 100%;
+}
+.highlighted-row {
+    background-color: rgba(255, 0, 0, 0.2); /* 연한 빨간색 배경 */
 }
 
 
