--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -173,7 +173,7 @@ header{
  }
 .header-top>.login{
     display: block;
-    color: #fff;
+    /* color: #fff; */
     font-size: .9rem;
     padding: 10px;
     margin: 0;
