--- a/client/src/styles/yuna.css
+++ b/client/src/styles/yuna.css
@@ -20,7 +20,6 @@
     cursor: pointer;
 }
 .category-select-tabMenu {
-    border: 1px solid #000;
     background-color: #fff;
     width: 100px;
     border-radius: 30px;
@@ -130,7 +129,7 @@
 .sub-category-select-click-tabMenu {
     color: #000;
     font-size: 1.3rem;
-    height: 30px;
+    padding: 1px 0;
     border-bottom: 3px solid #000;
     cursor: pointer;
 }
