--- a/client/src/styles/style2.css
+++ b/client/src/styles/style2.css
@@ -1,12 +1,9 @@
-/* 아우터로 더하는~ */
 /**************************
  * category(대분류) tab
- * YuNa
 **************************/
 .category-select {
     margin: 0 auto;
     display: flex;
-    /* justify-content: space-between; */
     width: 500px;
 }
 .category-select-click-tabMenu {
@@ -98,7 +95,7 @@
 
 /**************************
  * sub-category(소분류) rank
- * YuNa
+ * 
 **************************/
 .sub-category-select {
     display: flex;
@@ -206,7 +203,7 @@
 
 /**************************
  * 이주의 브랜드 이슈
- * YuNa
+ * 
 **************************/
 .issue-section {
     display: grid;
@@ -245,13 +242,13 @@
 
 /**************************
  * 주목할 브랜드
- * YuNa
+ * 
 **************************/
 
 
 /**************************
  * 광고 팝업창
- * YuNa
+ * 
 **************************/
 .mainAdPopup-wrap {
     z-index: 1;
@@ -288,7 +285,7 @@
 
 /**************************
  * 이미지 슬라이더
- * YuNa
+ * 
 **************************/
 .slider-btn {
     cursor: pointer;
@@ -346,7 +343,7 @@
 
 /**************************
  * 주목할 브랜드 - 상품 슬라이더
- * YuNa
+ * 
 **************************/
 .hotBrand-container {
     /* border: 1px solid red; */
@@ -424,7 +421,7 @@
 
 /**************************
  * 인덱스 상단 - 이미지 슬라이더
- * YuNa
+ * 
 **************************/
 .swiper {
     /* border: 1px solid blueviolet; */
@@ -451,7 +448,7 @@
 
 /**************************
  * 인덱스 상단 - 이미지 서브슬라이더
- * YuNa
+ * 
 **************************/
 .subSlide-container {
     overflow: hidden;
@@ -465,7 +462,7 @@
 
 /**************************
  * 메인 슬라이더
- * YuNa
+ * 
 **************************/
 .mainSlider-container {
     width: 1483px;
@@ -548,7 +545,7 @@
 }
 /**************************
  * 검색 모달창
- * YuNa
+ * 
 **************************/
 .header-search-modal-wrap {
     /* border: 1px solid red; */
@@ -633,7 +630,7 @@
 
 /**************************
  * 검색 페이지
- * YuNa
+ * 
 **************************/
 .searchPage-header {
     border: 1px solid silver;
@@ -709,7 +706,7 @@
 
 /**********************************
  * 장바구니 개별 옵션/수량 변경 모달
- * YuNa
+ * 
 ***********************************/
 .cartModal-change-wrap {
     padding: 10px;
